<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bodyColor">



    <ImageView
        android:id="@+id/admin_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/sri"
        android:layout_alignParentTop="true"/>


    <TextView
        android:layout_below="@+id/admin_pic"
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Log In"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#29ffffff"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/background_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:padding="5dp"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:id="@+id/login_emailId"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/background_email"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:ems="10"
            android:padding="5dp"
            android:textSize="20sp"
            android:layout_below="@+id/login_emailId"
            android:id="@+id/login_password"/>


        <include layout="@layout/login_register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/log"
            android:layout_below="@+id/login_password"
            android:layout_alignLeft="@+id/login_password"
            android:layout_alignStart="@+id/login_password"
            android:layout_alignRight="@+id/login_password"
            android:layout_alignEnd="@+id/login_password"
            />
        <include layout="@layout/or"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_below="@+id/log"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:id="@+id/or"/>
        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/or"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:text="@string/forgot_password" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="21dp"
            android:text="@string/google_login_here"
            android:id="@+id/google_login"
            android:layout_below="@+id/forgotPassword"
            android:layout_centerHorizontal="true" />



        </RelativeLayout>



</RelativeLayout>
